# plottini

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  pyproject.toml  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml  publish.yml  sonar.yml
.streamlit/: config.toml
scripts/: release.py
src/plottini/: __init__.py  __main__.py  cli.py  desktop.py
src/plottini/config/: __init__.py  defaults.py  loader.py  schema.py
src/plottini/core/: __init__.py  dataframe.py  exporter.py  parser.py  plotter.py  transforms.py
src/plottini/ui/: __init__.py  app.py  state.py
src/plottini/ui/components/: __init__.py  alignment_panel.py  chart_config.py  data_preview.py  data_tab.py  export_panel.py  export_tab.py  file_selector.py  filter_panel.py  plot_preview.py  preview.py  series_config.py  series_tab.py  settings_tab.py  transform_panel.py  transform_tab.py
src/plottini/utils/: errors.py
tests/: __init__.py  test_basic.py  test_cli.py  test_cli_render.py  test_config.py  test_dataframe.py  test_desktop.py  test_errors.py  test_exporter.py  test_integration.py  test_parser.py  test_plotter.py  test_transforms.py  test_ui_components_logic.py  test_ui_state.py
tests/fixtures/: large.tsv  scientific_notation.tsv  simple.tsv  whitespace.tsv  with_comments.tsv  with_headers.tsv
tests/fixtures/malformed/: inconsistent_columns.tsv  non_numeric.tsv
tests/fixtures/plot_data/: bar_categories.tsv  distribution_data.tsv  histogram_data.tsv  line_multi.tsv  line_simple.tsv  pie_data.tsv  polar_data.tsv  scatter_data.tsv
