[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plottini"
version = "2026.2.3.dev0"
description = "A user-friendly graph builder with matplotlib backend for creating publication-quality plots from TSV data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Lallu Anthoor", email = "dev@spendly.co.in"}
]
maintainers = [
    {name = "Lallu Anthoor", email = "dev@spendly.co.in"}
]
keywords = [
    "graph", "plot", "matplotlib", "visualization", "data", "tsv", "chart",
    "scientific", "publication", "streamlit", "desktop"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
    "Natural Language :: English",
]

dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "streamlit>=1.30",
    "click>=8.1",
    "pywebview>=4.0",
    "tomli>=2.0; python_version<'3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "twine>=4.0",
]

[project.scripts]
plottini = "plottini.cli:cli"

[project.urls]
Homepage = "https://github.com/lanthoor/plottini"
Documentation = "https://github.com/lanthoor/plottini#readme"
Repository = "https://github.com/lanthoor/plottini"
Issues = "https://github.com/lanthoor/plottini/issues"
Changelog = "https://github.com/lanthoor/plottini/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/plottini"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "streamlit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plottini.ui.components.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tomli"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tomli_w"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "webview"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=plottini",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/plottini"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
